english-llvm/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl
   5        | decls sdecl

   6  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   7  formals_opt :
   8              | formal_list

   9  formal_list : typ ID
  10              | formal_list COMMA typ ID

  11  dtyp : INT
  12       | STRING
  13       | FLOAT
  14       | CHAR

  15  atyp : dtyp dim_list

  16  typ : dtyp
  17      | atyp
  18      | BOOL
  19      | VOID
  20      | STRUCT ID

  21  dim_list : LSQUARE RSQUARE
  22           | LSQUARE RSQUARE dim_list

  23  index : LINDEX expr RINDEX

  24  vdecl_list :
  25             | vdecl_list vdecl

  26  vdecl : typ ID SEMI
  27        | typ ID ASSIGN expr SEMI

  28  sdecl : STRUCT ID LBRACE vdecl_list RBRACE SEMI

  29  stmt_list :
  30            | stmt_list stmt

  31  stmt : expr SEMI
  32       | RETURN SEMI
  33       | RETURN expr SEMI
  34       | LBRACE stmt_list RBRACE
  35       | IF LPAREN expr RPAREN stmt
  36       | IF LPAREN expr RPAREN stmt ELSE stmt
  37       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  38       | WHILE LPAREN expr RPAREN stmt

  39  expr_opt :
  40           | expr

  41  id : ID

  42  val_list : expr
  43           | expr COMMA val_list

  44  simple_arr_literal : LSQUARE val_list RSQUARE

  45  expr : NUM_LIT
  46       | FLOAT_LIT
  47       | STRING_LIT
  48       | CHAR_LITERAL
  49       | simple_arr_literal
  50       | expr index
  51       | TRUE
  52       | FALSE
  53       | ID
  54       | id INCREMENT
  55       | id DECREMENT
  56       | expr PLUS expr
  57       | expr MINUS expr
  58       | expr TIMES expr
  59       | expr DIVIDE expr
  60       | expr EQ expr
  61       | expr NEQ expr
  62       | expr LT expr
  63       | expr LEQ expr
  64       | expr GT expr
  65       | expr GEQ expr
  66       | expr AND expr
  67       | expr OR expr
  68       | MINUS expr
  69       | NOT expr
  70       | expr ASSIGN expr
  71       | expr DOT ID
  72       | ID LPAREN actuals_opt RPAREN
  73       | ID LSQUARE expr RSQUARE
  74       | LPAREN expr RPAREN

  75  actuals_opt :
  76              | actuals_list

  77  actuals_list : expr
  78               | actuals_list COMMA expr

  79  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (79)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (79)

	.  reduce 79


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)
	decls : decls . sdecl  (5)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	CHAR  shift 9
	STRING  shift 10
	STRUCT  shift 11
	EOF  shift 12
	.  error

	vdecl  goto 13
	fdecl  goto 14
	sdecl  goto 15
	typ  goto 16
	dtyp  goto 17
	atyp  goto 18


state 5
	dtyp : INT .  (11)

	.  reduce 11


state 6
	dtyp : FLOAT .  (13)

	.  reduce 13


state 7
	typ : BOOL .  (18)

	.  reduce 18


state 8
	typ : VOID .  (19)

	.  reduce 19


state 9
	dtyp : CHAR .  (14)

	.  reduce 14


state 10
	dtyp : STRING .  (12)

	.  reduce 12


state 11
	typ : STRUCT . ID  (20)
	sdecl : STRUCT . ID LBRACE vdecl_list RBRACE SEMI  (28)

	ID  shift 19
	.  error


state 12
	program : decls EOF .  (1)

	.  reduce 1


state 13
	decls : decls vdecl .  (3)

	.  reduce 3


state 14
	decls : decls fdecl .  (4)

	.  reduce 4


state 15
	decls : decls sdecl .  (5)

	.  reduce 5


state 16
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	vdecl : typ . ID SEMI  (26)
	vdecl : typ . ID ASSIGN expr SEMI  (27)

	ID  shift 20
	.  error


state 17
	atyp : dtyp . dim_list  (15)
	typ : dtyp .  (16)

	LSQUARE  shift 21
	ID  reduce 16

	dim_list  goto 22


state 18
	typ : atyp .  (17)

	.  reduce 17


state 19
	typ : STRUCT ID .  (20)
	sdecl : STRUCT ID . LBRACE vdecl_list RBRACE SEMI  (28)

	LBRACE  shift 23
	ID  reduce 20


state 20
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	vdecl : typ ID . SEMI  (26)
	vdecl : typ ID . ASSIGN expr SEMI  (27)

	SEMI  shift 24
	LPAREN  shift 25
	ASSIGN  shift 26
	.  error


state 21
	dim_list : LSQUARE . RSQUARE  (21)
	dim_list : LSQUARE . RSQUARE dim_list  (22)

	RSQUARE  shift 27
	.  error


state 22
	atyp : dtyp dim_list .  (15)

	.  reduce 15


state 23
	sdecl : STRUCT ID LBRACE . vdecl_list RBRACE SEMI  (28)
	vdecl_list : .  (24)

	.  reduce 24

	vdecl_list  goto 28


state 24
	vdecl : typ ID SEMI .  (26)

	.  reduce 26


state 25
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	formals_opt : .  (7)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	CHAR  shift 9
	STRING  shift 10
	STRUCT  shift 29
	RPAREN  reduce 7

	typ  goto 30
	formals_opt  goto 31
	formal_list  goto 32
	dtyp  goto 17
	atyp  goto 18


state 26
	vdecl : typ ID ASSIGN . expr SEMI  (27)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 44
	id  goto 45
	simple_arr_literal  goto 46


state 27
	dim_list : LSQUARE RSQUARE .  (21)
	dim_list : LSQUARE RSQUARE . dim_list  (22)

	LSQUARE  shift 21
	ID  reduce 21

	dim_list  goto 47


state 28
	vdecl_list : vdecl_list . vdecl  (25)
	sdecl : STRUCT ID LBRACE vdecl_list . RBRACE SEMI  (28)

	RBRACE  shift 48
	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	CHAR  shift 9
	STRING  shift 10
	STRUCT  shift 29
	.  error

	vdecl  goto 49
	typ  goto 50
	dtyp  goto 17
	atyp  goto 18


state 29
	typ : STRUCT . ID  (20)

	ID  shift 51
	.  error


state 30
	formal_list : typ . ID  (9)

	ID  shift 52
	.  error


state 31
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)

	RPAREN  shift 53
	.  error


state 32
	formals_opt : formal_list .  (8)
	formal_list : formal_list . COMMA typ ID  (10)

	COMMA  shift 54
	RPAREN  reduce 8


state 33
	expr : LPAREN . expr RPAREN  (74)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 55
	id  goto 45
	simple_arr_literal  goto 46


state 34
	simple_arr_literal : LSQUARE . val_list RSQUARE  (44)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 56
	id  goto 45
	val_list  goto 57
	simple_arr_literal  goto 46


state 35
	expr : MINUS . expr  (68)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 58
	id  goto 45
	simple_arr_literal  goto 46


state 36
	expr : NOT . expr  (69)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 59
	id  goto 45
	simple_arr_literal  goto 46


state 37
	expr : TRUE .  (51)

	.  reduce 51


state 38
	expr : FALSE .  (52)

	.  reduce 52


state 39
	expr : NUM_LIT .  (45)

	.  reduce 45


state 40
	expr : FLOAT_LIT .  (46)

	.  reduce 46


state 41
	expr : STRING_LIT .  (47)

	.  reduce 47


state 42
	expr : CHAR_LITERAL .  (48)

	.  reduce 48


state 43
	id : ID .  (41)
	expr : ID .  (53)
	expr : ID . LPAREN actuals_opt RPAREN  (72)
	expr : ID . LSQUARE expr RSQUARE  (73)

	LPAREN  shift 60
	LSQUARE  shift 61
	SEMI  reduce 53
	RPAREN  reduce 53
	RSQUARE  reduce 53
	COMMA  reduce 53
	PLUS  reduce 53
	MINUS  reduce 53
	TIMES  reduce 53
	DIVIDE  reduce 53
	ASSIGN  reduce 53
	DECREMENT  reduce 41
	INCREMENT  reduce 41
	EQ  reduce 53
	NEQ  reduce 53
	LT  reduce 53
	LEQ  reduce 53
	GT  reduce 53
	GEQ  reduce 53
	AND  reduce 53
	OR  reduce 53
	DOT  reduce 53
	LINDEX  reduce 53
	RINDEX  reduce 53


state 44
	vdecl : typ ID ASSIGN expr . SEMI  (27)
	expr : expr . index  (50)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . TIMES expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . EQ expr  (60)
	expr : expr . NEQ expr  (61)
	expr : expr . LT expr  (62)
	expr : expr . LEQ expr  (63)
	expr : expr . GT expr  (64)
	expr : expr . GEQ expr  (65)
	expr : expr . AND expr  (66)
	expr : expr . OR expr  (67)
	expr : expr . ASSIGN expr  (70)
	expr : expr . DOT ID  (71)

	SEMI  shift 62
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	ASSIGN  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	AND  shift 74
	OR  shift 75
	DOT  shift 76
	LINDEX  shift 77
	.  error

	index  goto 78


state 45
	expr : id . INCREMENT  (54)
	expr : id . DECREMENT  (55)

	DECREMENT  shift 79
	INCREMENT  shift 80
	.  error


state 46
	expr : simple_arr_literal .  (49)

	.  reduce 49


state 47
	dim_list : LSQUARE RSQUARE dim_list .  (22)

	.  reduce 22


state 48
	sdecl : STRUCT ID LBRACE vdecl_list RBRACE . SEMI  (28)

	SEMI  shift 81
	.  error


state 49
	vdecl_list : vdecl_list vdecl .  (25)

	.  reduce 25


state 50
	vdecl : typ . ID SEMI  (26)
	vdecl : typ . ID ASSIGN expr SEMI  (27)

	ID  shift 82
	.  error


state 51
	typ : STRUCT ID .  (20)

	.  reduce 20


state 52
	formal_list : typ ID .  (9)

	.  reduce 9


state 53
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (6)

	LBRACE  shift 83
	.  error


state 54
	formal_list : formal_list COMMA . typ ID  (10)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	VOID  shift 8
	CHAR  shift 9
	STRING  shift 10
	STRUCT  shift 29
	.  error

	typ  goto 84
	dtyp  goto 17
	atyp  goto 18


state 55
	expr : expr . index  (50)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . TIMES expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . EQ expr  (60)
	expr : expr . NEQ expr  (61)
	expr : expr . LT expr  (62)
	expr : expr . LEQ expr  (63)
	expr : expr . GT expr  (64)
	expr : expr . GEQ expr  (65)
	expr : expr . AND expr  (66)
	expr : expr . OR expr  (67)
	expr : expr . ASSIGN expr  (70)
	expr : expr . DOT ID  (71)
	expr : LPAREN expr . RPAREN  (74)

	RPAREN  shift 85
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	ASSIGN  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	AND  shift 74
	OR  shift 75
	DOT  shift 76
	LINDEX  shift 77
	.  error

	index  goto 78


state 56
	val_list : expr .  (42)
	val_list : expr . COMMA val_list  (43)
	expr : expr . index  (50)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . TIMES expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . EQ expr  (60)
	expr : expr . NEQ expr  (61)
	expr : expr . LT expr  (62)
	expr : expr . LEQ expr  (63)
	expr : expr . GT expr  (64)
	expr : expr . GEQ expr  (65)
	expr : expr . AND expr  (66)
	expr : expr . OR expr  (67)
	expr : expr . ASSIGN expr  (70)
	expr : expr . DOT ID  (71)

	COMMA  shift 86
	PLUS  shift 63
	MINUS  shift 64
	TIMES  shift 65
	DIVIDE  shift 66
	ASSIGN  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	AND  shift 74
	OR  shift 75
	DOT  shift 76
	LINDEX  shift 77
	RSQUARE  reduce 42

	index  goto 78


state 57
	simple_arr_literal : LSQUARE val_list . RSQUARE  (44)

	RSQUARE  shift 87
	.  error


58: shift/reduce conflict (shift 77, reduce 68) on LINDEX
state 58
	expr : expr . index  (50)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . TIMES expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . EQ expr  (60)
	expr : expr . NEQ expr  (61)
	expr : expr . LT expr  (62)
	expr : expr . LEQ expr  (63)
	expr : expr . GT expr  (64)
	expr : expr . GEQ expr  (65)
	expr : expr . AND expr  (66)
	expr : expr . OR expr  (67)
	expr : MINUS expr .  (68)
	expr : expr . ASSIGN expr  (70)
	expr : expr . DOT ID  (71)

	LINDEX  shift 77
	SEMI  reduce 68
	RPAREN  reduce 68
	RSQUARE  reduce 68
	COMMA  reduce 68
	PLUS  reduce 68
	MINUS  reduce 68
	TIMES  reduce 68
	DIVIDE  reduce 68
	ASSIGN  reduce 68
	EQ  reduce 68
	NEQ  reduce 68
	LT  reduce 68
	LEQ  reduce 68
	GT  reduce 68
	GEQ  reduce 68
	AND  reduce 68
	OR  reduce 68
	DOT  reduce 68
	RINDEX  reduce 68

	index  goto 78


59: shift/reduce conflict (shift 77, reduce 69) on LINDEX
state 59
	expr : expr . index  (50)
	expr : expr . PLUS expr  (56)
	expr : expr . MINUS expr  (57)
	expr : expr . TIMES expr  (58)
	expr : expr . DIVIDE expr  (59)
	expr : expr . EQ expr  (60)
	expr : expr . NEQ expr  (61)
	expr : expr . LT expr  (62)
	expr : expr . LEQ expr  (63)
	expr : expr . GT expr  (64)
	expr : expr . GEQ expr  (65)
	expr : expr . AND expr  (66)
	expr : expr . OR expr  (67)
	expr : NOT expr .  (69)
	expr : expr . ASSIGN expr  (70)
	expr : expr . DOT ID  (71)

	LINDEX  shift 77
	SEMI  reduce 69
	RPAREN  reduce 69
	RSQUARE  reduce 69
	COMMA  reduce 69
	PLUS  reduce 69
	MINUS  reduce 69
	TIMES  reduce 69
	DIVIDE  reduce 69
	ASSIGN  reduce 69
	EQ  reduce 69
	NEQ  reduce 69
	LT  reduce 69
	LEQ  reduce 69
	GT  reduce 69
	GEQ  reduce 69
	AND  reduce 69
	OR  reduce 69
	DOT  reduce 69
	RINDEX  reduce 69

	index  goto 78


state 60
	expr : ID LPAREN . actuals_opt RPAREN  (72)
	actuals_opt : .  (75)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	RPAREN  reduce 75

	expr  goto 88
	id  goto 45
	simple_arr_literal  goto 46
	actuals_opt  goto 89
	actuals_list  goto 90


state 61
	expr : ID LSQUARE . expr RSQUARE  (73)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 91
	id  goto 45
	simple_arr_literal  goto 46


state 62
	vdecl : typ ID ASSIGN expr SEMI .  (27)

	.  reduce 27


state 63
	expr : expr PLUS . expr  (56)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 92
	id  goto 45
	simple_arr_literal  goto 46


state 64
	expr : expr MINUS . expr  (57)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 93
	id  goto 45
	simple_arr_literal  goto 46


state 65
	expr : expr TIMES . expr  (58)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 94
	id  goto 45
	simple_arr_literal  goto 46


state 66
	expr : expr DIVIDE . expr  (59)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 95
	id  goto 45
	simple_arr_literal  goto 46


state 67
	expr : expr ASSIGN . expr  (70)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 96
	id  goto 45
	simple_arr_literal  goto 46


state 68
	expr : expr EQ . expr  (60)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 97
	id  goto 45
	simple_arr_literal  goto 46


state 69
	expr : expr NEQ . expr  (61)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 98
	id  goto 45
	simple_arr_literal  goto 46


state 70
	expr : expr LT . expr  (62)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 99
	id  goto 45
	simple_arr_literal  goto 46


state 71
	expr : expr LEQ . expr  (63)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 100
	id  goto 45
	simple_arr_literal  goto 46


state 72
	expr : expr GT . expr  (64)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 101
	id  goto 45
	simple_arr_literal  goto 46


state 73
	expr : expr GEQ . expr  (65)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 102
	id  goto 45
	simple_arr_literal  goto 46


state 74
	expr : expr AND . expr  (66)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 103
	id  goto 45
	simple_arr_literal  goto 46


state 75
	expr : expr OR . expr  (67)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 104
	id  goto 45
	simple_arr_literal  goto 46


state 76
	expr : expr DOT . ID  (71)

	ID  shift 105
	.  error


state 77
	index : LINDEX . expr RINDEX  (23)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 106
	id  goto 45
	simple_arr_literal  goto 46


state 78
	expr : expr index .  (50)

	.  reduce 50


state 79
	expr : id DECREMENT .  (55)

	.  reduce 55


state 80
	expr : id INCREMENT .  (54)

	.  reduce 54


state 81
	sdecl : STRUCT ID LBRACE vdecl_list RBRACE SEMI .  (28)

	.  reduce 28


state 82
	vdecl : typ ID . SEMI  (26)
	vdecl : typ ID . ASSIGN expr SEMI  (27)

	SEMI  shift 24
	ASSIGN  shift 26
	.  error


state 83
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (6)
	vdecl_list : .  (24)

	.  reduce 24

	vdecl_list  goto 107


state 84
	formal_list : formal_list COMMA typ . ID  (10)

	ID  shift 108
	.  error


state 85
	expr : LPAREN expr RPAREN .  (74)

	.  reduce 74


state 86
	val_list : expr COMMA . val_list  (43)

	LPAREN  shift 33
	LSQUARE  shift 34
	MINUS  shift 35
	NOT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NUM_LIT  shift 39
	FLOAT_LIT  shift 40
	STRING_LIT  shift 41
	CHAR_LITERAL  shift 42
	ID  shift 43
	.  error

	expr  goto 56
	id  goto 45
	val_list  goto 109
	simple_arr_literal  goto 46


state 87
	simple_arr_literal : LSQUARE val_list RSQUARE .  (44)

	.  reduce 44

